Fixing user mention overflow

--- a/KXH230029-p8/components/UserPhotos/styles.css
+++ b/KXH230029-p8/components/UserPhotos/styles.css
@@ -51,12 +51,14 @@
     align-items: center;
     justify-content: left;
     flex-direction: column !important;
+    z-index: 2;
+    overflow: visible;
 }
 
 .comment-input-box {
-    overflow: hidden !important;
     justify-content: center !important;
     width: 100%;
+    z-index: 2;
 }
 
 #standard-multiline-flexible {
